Fix visibility of do-not-visit householders

--- a/client/src/views/pages/shared/householder-item.css
+++ b/client/src/views/pages/shared/householder-item.css
@@ -1,4 +1,4 @@
-.doNotVisit {
+.doNotVisit, .doNotVisit a {
   color: red;
   text-decoration: line-through !important;
 }
